# vss-vision

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  InstallDependencies  InstallQt  README.md  docker_build  docker_run  rc_coding_style_qt_config.xml  rebuild.sh  style.astylerc  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
Config/: ATK_temp.xml  CameraConfigL.json  DF_temp.xml  LutVideo.xml  PositionProcessingKMeans.xml  Reference_Navigation_encoder.xml  SecondaryColor.json  Strategy.xml  Video.xml  fieldLimits.xml
Config/Segmentation/: Zeros.xml  hotel_8_manha.xml
client/: .gitignore  Makefile  Network.cpp  RCClient.cpp  rcclient.cpp  test.cpp
client/include/: Base.hpp  Entity.hpp  Network.hpp  TestModule.hpp
client/include/Network/: Frame.hpp  Server.hpp  Subscriber.hpp  SubscriberConnection.hpp
client/python/: client.py  main.py  receiver.py  reciever.py  wrapper_pb2.py
client/python/pb/: compile.sh
client/src/main/: RCClient.cpp
client/src/shared/Network/: Server.cpp  Subscriber.cpp
client/src/test/: test.cpp
include/bits/: stdc++.h
src/: .env  TBBThreadManager.cpp  TBBThreadManager.h  VSS-VISION.pro  VSSL-VISION  VSSL.pro  cameraconfigurationdialog.cpp  cameraconfigurationdialog.h  cameraconfigurationdialog.ui  config.json  fieldpointscalibratedialog.cpp  fieldpointscalibratedialog.h  fieldpointscalibratedialog.ui  image.qrc  maggicsegmentationdialog.cpp  maggicsegmentationdialog.h  maggicsegmentationdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  segmentationconfigdialog.cpp  segmentationconfigdialog.h  segmentationconfigdialog.ui  trackconfigdialog.cpp  trackconfigdialog.h  trackconfigdialog.ui  ui_MMainWindow.h  ui_MainVSSWindow.h  ui_MainWindow.h  ui_ParameterOption.h  ui_ParametersWindow.h  ui_RobotWidget.h  ui_cameraconfigurationdialog.h  ui_fieldpointscalibratedialog.h  ui_maggicsegmentationdialog.h  ui_segmentationconfigdialog.h  ui_trackconfigdialog.h  ui_visionconfigdialog.h  visionconfigdialog.cpp  (+4 more)
src/CameraManager/: CameraManager.cpp  CameraManager.h  CameraThread.cpp  CameraThread.h
src/Config/: CameraConfigD.json  CameraConfigD.xml~  CameraConfigL.json  Cell.xml  Cell_temp.xml  DF_MEIO_temp.xml  DF_ZAGUEIRO_temp.xml  GK_temp.xml  Navigation.xml  PositionProcessing.xml  Reference_Navigation.xml  SecondaryColor.json  SecondaryColor.xml  Video.xml  camera_config.sh  camera_config_60fps.sh  camera_config_inatel_wl.xml  camera_config_magic.sh  fieldLimits.json
src/Config/Segmentation/: 03_NOV_2017.xml  DefaultMaggicSegmentation.txt  MaggicSegmentation.txt  Video.xml  e_agora.xml  hotel_8_manha_60fps.xml  inatel1.xml  segmentacao_07_manha.xml  segmentation_amistoso_5.xml  segmentation_hotel_3.xml
src/Entity/: Entity.cpp  Entity.h  Player.cpp  Player.h  parameter.h
src/Field/: Field.cpp  Field.h
src/GameInfo/: GameInfo.cpp  GameInfo.h
src/Logging/: logging.cpp  logging.h
src/Network/: Network.cpp  Network.h  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  wrapper.pb.cc  wrapper.pb.h
src/Network/pb/: compile_docker.sh  wrapper.proto
src/Network/protobuf/proto/: CMakeLists.txt
src/Network/visionServer/: server.cpp  server.h
src/Timer/: Timer.cpp  Timer.h
src/Utils/: BetterEnum.h  CoachUtils.cpp  CoachUtils.h  Defines.h  Draw.cpp  Draw.h  Enums.h  EnumsAndConstants.cpp  EnumsAndConstants.h  FilterUtils.cpp  FilterUtils.h  Geometry.cpp  Geometry.h  Global.cpp  Global.h  Limits.h  RecordingSettingsDialog.h  Types.h  Utils.cpp  Utils.h  kalmanfilter.cpp  kalmanfilter.h  matrix2d.cpp  matrix2d.h
src/Vision/: ColorSpace.cpp  ColorSpace.h  README.md  Vision.cpp  Vision.h
src/Vision/ImageProcessing/: ImageProcessing.cpp  ImageProcessing.h  LUTSegmentation.cpp  LUTSegmentation.h  MaggicSegmentation.cpp  MaggicSegmentation.h  WarpCorrection.cpp  WarpCorrection.h
src/Vision/ImageProcessing/Cuda/: Makefile
src/Vision/ImageProcessing/Cuda/LUT/: Utils.h  lut_gpu.h  lut_kernel.cu  lut_kernel.h  lut_kernel_test.cu
src/Vision/ImageProcessing/OpenCV/: connectedcomponents.cpp  connectedcomponents.hpp
src/Vision/PositionProcessing/: BlobDetection.cpp  BlobDetection.h  PositionProcessing.cpp  PositionProcessing.h  WhereAreThose.cpp  runlengthencoding.cpp  runlengthencoding.h
src/Windows/: FileConstants.h  MainVSSWindow.cpp  MainVSSWindow.h  MainVSSWindow.ui  ParameterOption.cpp  ParameterOption.h  ParameterOption.ui  ParametersWindow.cpp  ParametersWindow.h  ParametersWindow.ui  RobotWidget.cpp  RobotWidget.h  RobotWidget.ui
src/iconTools/: Untitled Document~  icontools.qrc
